Bug 1531: Use jvmarg.generic for unit testing, e.g. '--enable-native-access=ALL-UNNAMED'
The property setup has been moved to GlueGen's make/jogamp-env.xml.